--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "^3.4.4",
     "react-super-responsive-table": "^5.1.4",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "serve -s build",
