--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://solo-backend.herokuapp.com/",
   "eslintConfig": {
     "extends": "react-app"
   },
